--- a/deploy.yaml
+++ b/deploy.yaml
@@ -39,7 +39,7 @@ spec:
   ports:
     - name: http
       port: 80
-      nodePort: 30080
+      #nodePort: 30080
 
-  type: NodePort
+  type: LoadBalancer
 
